--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone2</title>
 </head>
-<body id="container-meal">
+<body class="container-meal">
  <section class="meals"></section>
  <div id="modals"></div>
 </body>
