--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone2</title>
 </head>
-
-<body>
-  <div class="home-counter">
-    <p class="home-counter-p"></p>
-  </div>
-  <div class="container-meal">
-    <section class="meals"></section>
-    <div id="modals"></div>
-  </div>
+<body class="container-meal">
+ <section class="meals"></section>
+ <div id="modals"></div>
 </body>
-
 </html>
