--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
  <section class="meals"></section>
  <div id="modals"></div>
 </div>
+<footer>
+  <div>
+    <p>Lisando Seia & Jose Herrera©</p>
+    <p>Canadian Food</p>
+    <p>2022</p>
+  </div>
+</footer>
 </body>
 
 </html>
