--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
   <title>Capstone2</title>
 </head>
 <body>
-<div class="counter-cont">
-  <p class="home-counter-p"></p>
-</div>
+  <header>
+    <a href="index.html">Canadian food</a>
+    <p class="home-counter-p"></p>
+  </header>
 <div class="container-meal">
  <section class="meals"></section>
  <div id="modals"></div>
