add style footer and popup

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone2</title>
 </head>
-<body>
+<body class="container">
   <header>
     <a href="index.html">Canadian food</a>
     <p class="home-counter-p"></p>
   </header>
-<div class="container-meal">
- <section class="meals"></section>
- <div id="modals"></div>
-</div>
+<main> 
+  <div class="container-meal">
+  <section class="meals"></section>
+  <div id="modals"></div>
+  </div>
+</main> 
 <footer>
   <div>
     <p>Lisando Seia & Jose Herrera©</p>
