Add header and style home

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
 </head>
 <body class="container">
   <header>
-    <a href="index.html">Canadian food</a>
+    <div >
+      <a class="logo" href="index.html">
+        <div class="logo-img"></div>
+        Canadian <br> food</a>
+    </div>
     <p class="home-counter-p"></p>
   </header>
 <main> 
@@ -19,8 +23,8 @@
 </main> 
 <footer>
   <div>
+    <p>Canadian Food, all rights reserved</p>
     <p>Lisando Seia & Jose Herrera©</p>
-    <p>Canadian Food</p>
     <p>2022</p>
   </div>
 </footer>
