--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Capstone2</title>
 <script defer src="main.js"></script></head>
-
-<body>
-  <div class="home-counter">
+<body class="container">
+  <header>
+    <div >
+      <a class="logo" href="index.html">
+        <div class="logo-img"></div>
+        Canadian <br> food</a>
+    </div>
     <p class="home-counter-p"></p>
-  </div>
+  </header>
+<main> 
   <div class="container-meal">
-    <section class="meals"></section>
-    <div id="modals"></div>
+  <section class="meals"></section>
+  <div id="modals"></div>
   </div>
+</main> 
+<footer>
+  <div>
+    <p>Canadian Food, all rights reserved</p>
+    <p>Lisando Seia & Jose Herrera©</p>
+    <p>2022</p>
+  </div>
+</footer>
 </body>
 
 </html>
